[gd_scene load_steps=11 format=3 uid="uid://drxl0ynda46if"]

[ext_resource type="Script" uid="uid://d0uqx3gvq6l6u" path="res://e/kitchen_1.gd" id="1_q5cvv"]
[ext_resource type="Theme" uid="uid://b4naw2i47mcoi" path="res://e/theme.tres" id="2_rq7st"]
[ext_resource type="Texture2D" uid="uid://bk3kv7t4f4356" path="res://images/croissant.png" id="3_rq7st"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nmgoy"]
atlas = ExtResource("3_rq7st")
region = Rect2(0, 0, 643, 428)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ja1"]
atlas = ExtResource("3_rq7st")
region = Rect2(643, 0, 643, 428)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqxkb"]
atlas = ExtResource("3_rq7st")
region = Rect2(0, 428, 643, 428)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75de"]
atlas = ExtResource("3_rq7st")
region = Rect2(643, 428, 643, 428)

[sub_resource type="AtlasTexture" id="AtlasTexture_pffuf"]
atlas = ExtResource("3_rq7st")
region = Rect2(0, 856, 643, 428)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq7st"]
atlas = ExtResource("3_rq7st")
region = Rect2(0, 0, 643, 428)

[sub_resource type="SpriteFrames" id="SpriteFrames_huhxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmgoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqxkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pffuf")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq7st")
}],
"loop": false,
"name": &"new_animation",
"speed": 5.0
}]

[node name="kitchen1" type="Node2D"]
script = ExtResource("1_q5cvv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1928.0
offset_bottom = 1101.0
color = Color(0.54901963, 0.34117648, 0.27058825, 1)

[node name="border" type="Node2D" parent="."]

[node name="ColorRect12" type="ColorRect" parent="border"]
offset_left = 1934.0
offset_top = 1037.0
offset_right = 1977.7975
offset_bottom = 2959.0059
rotation = 1.5707964
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect11" type="ColorRect" parent="border"]
offset_left = 1921.0
offset_top = 1.0
offset_right = 1964.7975
offset_bottom = 1923.006
rotation = 1.5707964
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect10" type="ColorRect" parent="border"]
offset_left = 1881.0
offset_top = 1.0
offset_right = 1921.0
offset_bottom = 1173.0
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="ColorRect9" type="ColorRect" parent="border"]
offset_right = 40.0
offset_bottom = 1172.0
color = Color(0.54901963, 0.21568628, 0.21960784, 1)

[node name="Button" type="Button" parent="."]
offset_left = 75.0
offset_top = 81.0
offset_right = 152.0
offset_bottom = 142.0
theme = ExtResource("2_rq7st")
text = "?"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(933, 508)
sprite_frames = SubResource("SpriteFrames_huhxs")
animation = &"new_animation"

[node name="Button" type="Button" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0)
offset_left = -315.0
offset_top = -94.0
offset_right = 321.0
offset_bottom = 224.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 1308.0
offset_top = 60.0
offset_right = 1871.0
offset_bottom = 173.0
theme = ExtResource("2_rq7st")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="pressed" from="AnimatedSprite2D/Button" to="." method="_on_buttonn_pressed"]
